# bin2

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test_bin.cpp
Kernel/include/: AVX2Kernel.h  Gemm.h  GemmKernel.h
Kernel/src/: AVX2Kernel.cpp  Gemm.cpp  GemmKernel.cpp
pycode/: netT.json  tl.py
